Added some packaging files.

--- a/src/RailwayExtensions/RailwayExtensions/RailwayExtensions.csproj
+++ b/src/RailwayExtensions/RailwayExtensions/RailwayExtensions.csproj
@@ -1,12 +1,35 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <GeneratedAssemblyInfoFile>AssemblyInfo.cs</GeneratedAssemblyInfoFile>
-    <Version>0.1.0.0</Version>
+    <Version>1.0.0.0</Version>
     <Authors>Murat BOZ</Authors>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/murat-boz/RailwayExtensions</RepositoryUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <Description>This package is built for implementing Railway Oriented Programming.</Description>
+    <PackageProjectUrl>https://github.com/murat-boz</PackageProjectUrl>
+    <PackageTags>Railway;ROP</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
